--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
         }
     }
 
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 }
 
 dependencies {
@@ -42,9 +47,17 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation "org.assertj:assertj-core:2.9.1"
+    //Unit Tests
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
 
+    testImplementation 'org.assertj:assertj-core:2.9.1'
+
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+
+    //Emulated Tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
